# misis2023f-22-2-khapkov-m-e

./: .build.bat  .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
global_resources/: mouse_drawing.cpp
prj.codeforces/: 1840a.cpp  1841a.cpp  1856b.cpp  1862a.cpp  1862c.cpp  1879a.cpp  20c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp  test_app.cpp
prj.cw/map_drawer/: CMakeLists.txt  drawer.cpp
prj.cw/material_lib/: CMakeLists.txt  generator.cpp  grid.cpp  grid.hpp  hexagon.cpp  hexagon.hpp  main.cpp  material.cpp  mesh_generator.cpp  mesh_generator.hpp  point.cpp  renderer.cpp  rlFPCamera.cpp  test.cpp  test_cases.cpp  tests.cpp  triangle.cpp  triangle.hpp
prj.cw/material_lib/include/material_lib/: material.hpp
prj.cw/material_lib/include/renderer/: renderer.hpp
prj.cw/material_lib/renderer/: geometry_buider.cpp  terrain_sector.cpp
prj.cw/mesh_generator/: CMakeLists.txt  generator.cpp  grid.cpp  hexagon.cpp  point.cpp
prj.cw/mesh_generator/include/mesh_generator/: grid.hpp  hexagon.hpp  point.hpp
prj.cw/resources/: test_cases.cpp  tests.cpp  texture_blending.frag  texture_blending.fs
prj.cw_old/material_lib/: CMakeLists.txt  material.cpp
prj.cw_old/mesh_generator/: grid.cpp  hexagon.cpp  triangle.cpp
prj.cw_old/mesh_generator/include/mesh_generator/: grid.hpp
prj.cw_old/resources/: mesh_generator.hpp  texture_blending.frag
prj.test/: CMakeLists.txt  renderer.cpp  renderer.hpp  renderer_test.cpp  rlFPCamera.cpp  test.cpp
resources/: mask.fs  texture_blending.frag  texture_mix.frag
sample/: CMakeLists.txt  complex_transition.cpp  fractal_dividing.cpp  howto.cpp  learn_triangle.cpp  main.cpp  mesh_generation.cpp  plain_rectangle.cpp  shader.cpp  simple_blend.cpp  simple_transition.cpp  tri_texture.cpp  triangle.cpp  triangulation_test.cpp
sample/game/: main.cpp  rlFPCamera.h
sample/map_drawer/: drawer.cpp  main.cpp
sample/mesh_generator/: CMakeLists.txt
sample/resources/: howto.cpp  texture_blending.frag
sample/resources/shaders/: base_lighting.vs  lighting.fs
tests/: CMakeLists.txt  gen_test.cpp  lib_tests.cpp
